--- a/.github/workflows/main_tracker.yml
+++ b/.github/workflows/main_tracker.yml
@@ -1,15 +1,17 @@
-name: Financial Tracker System
+name: Financial Tracker & Web Deploy
 
 on:
   schedule:
-    - cron: '0 14-22 * * 1-5' # Runs every hour during market hours
-  workflow_dispatch: # Allows manual run
+    - cron: '0 14-22 * * 1-5' # רץ בכל שעה בשעות המסחר
+  workflow_dispatch: # מאפשר הרצה ידנית
 
 permissions:
   contents: write
+  pages: write      # הרשאה לכתוב לדף האינטרנט
+  id-token: write   # נדרש לאימות הפריסה
 
 jobs:
-  update:
+  build-and-deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
@@ -23,14 +25,27 @@ jobs:
       - name: Install Dependencies
         run: pip install pandas yfinance pytz matplotlib
 
-      - name: Execute Tracker
-        run: python stock_tracker.py
+      - name: Fetch Data & Generate Report
+        run: |
+          python stock_tracker.py
+          python generate_report.py
 
-      - name: Execute Reporter
-        run: python generate_report.py
-
-      - name: Commit Data Hub Changes
+      - name: Commit Data Changes
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          commit_message: "Automated Data Update [skip ci]"
+          commit_message: "Data Update [skip ci]"
           file_pattern: 'data_hub/ README.md'
+
+      # --- שלבי פרסום האתר ---
+      - name: Setup Pages
+        uses: actions/configure-pages@v4
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          # כאן אנחנו אומרים לו להעלות את כל התיקייה כולל index.html ו-data_hub
+          path: '.' 
+
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
