--- a/.github/workflows/manual_analysis.yml
+++ b/.github/workflows/manual_analysis.yml
@@ -1,6 +1,5 @@
 name: Manual Portfolio Analysis
 
-# הגדרה להרצה ידנית בלבד
 on:
   workflow_dispatch:
 
@@ -8,7 +7,7 @@ jobs:
   analyze:
     runs-on: ubuntu-latest
     permissions:
-      contents: write  # הרשאה לעדכן את ה-README והגרפים
+      contents: write
 
     steps:
       - name: Checkout Repository
@@ -22,7 +21,69 @@ jobs:
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pandas yfinance matplotlib numpy
+          pip install pandas yfinance matplotlib numpy pytz
+
+      - name: Ensure Analysis Script Exists
+        run: |
+          if [ ! -f analysis_pro.py ]; then
+            echo "analysis_pro.py not found. Creating it..."
+            cat << 'EOF' > analysis_pro.py
+          import json
+          import pandas as pd
+          import numpy as np
+          import matplotlib.pyplot as plt
+          import os
+          from datetime import datetime
+
+          DATA_DIR = "data_hub"
+          HISTORY_FILE = os.path.join(DATA_DIR, "stock_history.json")
+          PORTFOLIO_FILE = os.path.join(DATA_DIR, "portfolio.json")
+          REPORT_FILE = "ANALYSIS_REPORT.md"
+          PREDICTION_CHART = os.path.join(DATA_DIR, "predictions.png")
+
+          def calculate_mean_reversion(df, ticker):
+              current_price = df[ticker].iloc[-1]
+              avg_price = df[ticker].mean()
+              std_dev = df[ticker].std()
+              z_score = (current_price - avg_price) / std_dev if std_dev > 0 else 0
+              if z_score > 1.5: return "🔴 יקרה היסטורית (Overvalued)"
+              if z_score < -1.5: return "🟢 זולה היסטורית (Undervalued)"
+              return "⚪ בטווח הממוצע"
+
+          def analyze_momentum(df, ticker):
+              prices = df[ticker].dropna()
+              if len(prices) < 50: return "אין מספיק נתונים"
+              ma50 = prices.rolling(window=50).mean().iloc[-1]
+              ma200 = prices.rolling(window=min(len(prices), 200)).mean().iloc[-1]
+              return "🚀 מומנטום חיובי (Golden Cross)" if ma50 > ma200 else "⚠️ מומנטום שלילי (Death Cross)"
+
+          def main():
+              if not os.path.exists(HISTORY_FILE) or not os.path.exists(PORTFOLIO_FILE):
+                  print("Data missing."); return
+              with open(PORTFOLIO_FILE, 'r') as f: holdings = json.load(f)
+              with open(HISTORY_FILE, 'r') as f: history = json.load(f)
+              df = pd.DataFrame([{"ts": e['timestamp'], **e['prices']} for e in history])
+              df['ts'] = pd.to_datetime(df['ts'])
+              df = df.sort_values('ts')
+              tickers = list(holdings.keys())
+              analysis_rows = []
+              plt.figure(figsize=(12, 6))
+              plt.style.use('dark_background')
+              for t in tickers:
+                  if t not in df.columns: continue
+                  reversion = calculate_mean_reversion(df, t)
+                  momentum = analyze_momentum(df, t)
+                  delta = df[t].diff(); gain = delta.where(delta > 0, 0).rolling(14).mean(); loss = -delta.where(delta < 0, 0).rolling(14).mean()
+                  rs = gain / loss; rsi = 100 - (100 / (1 + rs.iloc[-1]))
+                  status = "קנייה" if rsi < 30 else "מכירה" if rsi > 70 else "המתנה"
+                  analysis_rows.append(f"| {t} | {reversion} | {momentum} | {rsi:.1f} | **{status}** |")
+                  plt.plot(df['ts'], (df[t]/df[t].iloc[0])*100, label=t, alpha=0.7)
+              plt.legend(); plt.savefig(PREDICTION_CHART, bbox_inches='tight'); plt.close()
+              report = ["# 🧠 דוח ניתוח טכני ותחזיות הסתברותיות", f"עדכון: {datetime.now().strftime('%d/%m/%Y %H:%M')}\n", "| מניה | מצב ערך | מומנטום | RSI | המלצה |", "|:---|:---|:---|:---|:---|", "\n".join(analysis_rows), f"\n![Predictions](./{PREDICTION_CHART})"]
+              with open(REPORT_FILE, 'w', encoding='utf-8') as f: f.write("\n".join(report))
+          if __name__ == "__main__": main()
+          EOF
+          fi
 
       - name: Run Analysis Script
         run: python analysis_pro.py
@@ -31,6 +92,6 @@ jobs:
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add ANALYSIS_REPORT.md data_hub/predictions.png
-          git commit -m "Manual analysis update: ${GITHUB_SHA}" || echo "No changes to commit"
+          git add ANALYSIS_REPORT.md data_hub/predictions.png analysis_pro.py
+          git commit -m "Manual analysis update with auto-script generation" || echo "No changes"
           git push
